--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,13 +11,19 @@ repos:
     rev: 5.5.1
     hooks:
       - id: isort
+  - repo: https://github.com/humitos/mirrors-autoflake.git
+    rev: v1.3
+    hooks:
+      - id: autoflake
+        args: ["--in-place", "--remove-all-unused-imports"]
   - repo: https://github.com/psf/black
     rev: master
     hooks:
       - id: black
         args: [--line-length=88]
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.4
-    hooks:
-      - id: flake8
-        additional_dependencies: [flake8-bugbear]
+#  - repo: https://gitlab.com/pycqa/flake8
+#    rev: 3.8.4
+#    hooks:
+#      - id: flake8
+#        additional_dependencies: [flake8-bugbear]
+
