--- a/src/nulog-inference-service/requirements.txt
+++ b/src/nulog-inference-service/requirements.txt
@@ -1,13 +1,10 @@
-scipy
+boto3==1.17.45
+torchvision==0.7.0
+asyncio_nats_client==0.11.4
+elasticsearch==7.12.0
+torch==1.6.0
+botocore==1.20.45
 numpy==1.17.4
 pandas==0.25.3
-deap==1.3.1
-recommonmark==0.6.0
-scikit_learn==0.22.2.post1
-pika
-torchvision==0.7.0
-torch==1.6.0
-boto3
-asyncio-nats-client
-elasticsearch
-aiohttp
+scikit_learn==0.24.1
+aiohttp==3.7.4.post0
