--- a/src/nulog-train/requirements.txt
+++ b/src/nulog-train/requirements.txt
@@ -1,15 +1,10 @@
-scipy
-numpy
-torchvision
-nltk==3.4.5
-torch
+boto3==1.17.45
+torchvision==0.7.0
+asyncio_nats_client==0.11.4
+elasticsearch==7.12.0
+torch==1.6.0
+botocore==1.20.45
+numpy==1.17.4
 pandas==0.25.3
-deap==1.3.1
-tqdm
-recommonmark
-scikit_learn
-pylertalertmanager
-elasticsearch
-datetime
-boto3
-asyncio-nats-client
+scikit_learn==0.24.1
+aiohttp==3.7.4.post0
