--- a/src/training_controller/Dockerfile
+++ b/src/training_controller/Dockerfile
@@ -1,7 +1,10 @@
 FROM nikolaik/python-nodejs:python3.8-nodejs14-slim
-COPY requirements.txt ./
-COPY training_controller.py ./
-COPY prepare_training_logs.py ./
+COPY ./training_controller/ /app/
+COPY ./utils/nats_wrapper.py /app/nats_wrapper.py
+
+RUN chmod a+rwx -R /app
+WORKDIR /app
+
 RUN pip install --no-cache-dir -r requirements.txt
 RUN npm install elasticdump -g
 CMD ["python", "training_controller.py"]
