add threshold env variable for nulog

--- a/src/nulog-inference-service/nulog-inference-service.yaml
+++ b/src/nulog-inference-service/nulog-inference-service.yaml
@@ -25,6 +25,8 @@ spec:
           value: "myaccesskey"
         - name: MINIO_SECRET_KEY
           value: "mysecretkey"
+        - name: MODEL_THRESHOLD
+          value: 0.6
         resources:
           limits:
             nvidia.com/gpu: 1
