--- a/src/nulog-inference-service/nulog-inference-service.yaml
+++ b/src/nulog-inference-service/nulog-inference-service.yaml
@@ -26,7 +26,7 @@ spec:
         - name: MINIO_SECRET_KEY
           value: "mysecretkey"
         - name: MODEL_THRESHOLD
-          value: 0.6
+          value: "0.6"
         resources:
           limits:
             nvidia.com/gpu: 1
