Remove old Nats code from train.py script as nats_wrapper is now being used

--- a/src/nulog-train/Dockerfile
+++ b/src/nulog-train/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.7-slim
 COPY ./nulog-train/ /app/
 COPY ./models/nulog/ /app/
+COPY ./utils/nats_wrapper.py /app/nats_wrapper.py
 RUN chmod a+rwx -R /app
 WORKDIR /app
 
