--- a/src/preprocessing-service/preprocessing.yaml
+++ b/src/preprocessing-service/preprocessing.yaml
@@ -15,8 +15,10 @@ spec:
     spec:
       containers:
       - name: preprocessing-service
-        image: sanjayrancher/preprocessing-service
+        image: sanjayrancher/preprocessing-service:v0.0
         imagePullPolicy: Always
         env:
         - name: NATS_SERVER_URL
           value: "nats://nats_client:VfU6TcAl9x@nats-client.default.svc:4222"
+        - name: ES_ENDPOINT
+          value: "https://opendistro-es-client-service.default.svc.cluster.local:9200"
