--- a/src/nulog-inference-service/nulog-inference-service.yaml
+++ b/src/nulog-inference-service/nulog-inference-service.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: nulog-inference-service
-        image: tybalex/nulog-inference-service
+        image: tybalex/nulog-inference-service:v0.0
         imagePullPolicy: Always
         env:
         - name: NATS_SERVER_URL
