--- a/src/training_controller/training_controller.yaml
+++ b/src/training_controller/training_controller.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: training-controller
-        image: amartyarancher/training-controller
+        image: amartyarancher/training-controller:v0.0
         imagePullPolicy: Always
         env:
         - name: NATS_SERVER_URL
