Make sure v0.0 is added to image for nulog-train

--- a/src/nulog-train/nulog_train.yaml
+++ b/src/nulog-train/nulog_train.yaml
@@ -10,7 +10,7 @@ spec:
     spec:
       containers:
       - name: nulog-train
-        image: amartyarancher/nulog-train
+        image: amartyarancher/nulog-train:v0.0
         imagePullPolicy: Always
         env:
         - name: MINIO_ACCESS_KEY
