--- a/src/training_controller/training_controller.yaml
+++ b/src/training_controller/training_controller.yaml
@@ -23,3 +23,5 @@ spec:
           value: "myaccesskey"
         - name: MINIO_SECRET_KEY
           value: "mysecretkey"
+        - name: ES_ENDPOINT
+          value: "http://elasticsearch-coordinating-only.default.svc.cluster.local:9200"
