--- a/src/training_controller/training_controller.yaml
+++ b/src/training_controller/training_controller.yaml
@@ -19,6 +19,8 @@ spec:
         env:
         - name: NATS_SERVER_URL
           value: "nats://nats_client:VfU6TcAl9x@nats-client.default.svc:4222"
+        - name: MINIO_SERVER_URL
+          value: "http://minio.default.svc.cluster.local:9000"
         - name: MINIO_ACCESS_KEY
           value: "myaccesskey"
         - name: MINIO_SECRET_KEY
