Updated README to note that one rbac.yaml file is needed, yaml file to include ES_ENDPOINT as an environmental variable and prepare_training_logs.py to take last 10000 logs from elasticsearch when making memory computations

--- a/src/training_controller/training_controller.yaml
+++ b/src/training_controller/training_controller.yaml
@@ -25,3 +25,5 @@ spec:
           value: "myaccesskey"
         - name: MINIO_SECRET_KEY
           value: "mysecretkey"
+        - name: ES_ENDPOINT
+          value: "http://elasticsearch-coordinating-only.default.svc.cluster.local:9200"
