--- a/src/training_controller/training_controller.yaml
+++ b/src/training_controller/training_controller.yaml
@@ -26,4 +26,4 @@ spec:
         - name: MINIO_SECRET_KEY
           value: "mysecretkey"
         - name: ES_ENDPOINT
-          value: "http://elasticsearch-coordinating-only.default.svc.cluster.local:9200"
+          value: "https://opendistro-es-client-service.default.svc.cluster.local:9200"
