--- a/src/training_controller/training_controller.yaml
+++ b/src/training_controller/training_controller.yaml
@@ -27,3 +27,7 @@ spec:
           value: "mysecretkey"
         - name: ES_ENDPOINT
           value: "https://admin:admin@opendistro-es-client-service.default.svc.cluster.local:9200"
+        - name: AWS_ACCESS_KEY
+          value: "AWS_ACCESS_KEY"
+        - name: AWS_SECRET_KEY
+          value: "AWS_SECRET_KEY"
