--- a/src/nulog-inference-service/nulog-inference-service-control-plane.yaml
+++ b/src/nulog-inference-service/nulog-inference-service-control-plane.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nulog-inference-service
+  name: nulog-inference-service-control-plane
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nulog-inference-service
+      app: nulog-inference-service-control-plane
   template:
     metadata:
       labels:
-        app: nulog-inference-service
+        app: nulog-inference-service-control-plane
     spec:
       containers:
-      - name: nulog-inference-service
-        image: tybalex/nulog-inference-service:v0.0
+      - name: nulog-inference-service-control-plane
+        image: tybalex/nulog-inference-service-control-plane:v0.0
         imagePullPolicy: Always
         env:
         - name: NATS_SERVER_URL
@@ -28,7 +28,13 @@ spec:
         - name: MINIO_SECRET_KEY
           value: "mysecretkey"
         - name: MODEL_THRESHOLD
-          value: "0.7"
+          value: "0.6"
+        - name: IS_CONTROL_PLANE_SERVICE
+          value: "True"
         resources:
           limits:
-            nvidia.com/gpu: 1
+            memory: 2Gi
+            cpu: "8"
+          requests:
+            memory: 1Gi
+            cpu: "4"
