--- a/src/nulog-inference-service/nulog-inference-service.yaml
+++ b/src/nulog-inference-service/nulog-inference-service.yaml
@@ -14,17 +14,21 @@ spec:
     spec:
       containers:
       - name: nulog-inference-service
-        image: tybalex/nulog-inference-service
+        image: tybalex/nulog-inference-service:v0.0
         imagePullPolicy: Always
         env:
         - name: NATS_SERVER_URL
           value: "nats://nats_client:VfU6TcAl9x@nats-client.default.svc:4222"
         - name: ES_ENDPOINT
-          value: "http://elasticsearch-coordinating-only.default.svc.cluster.local:9200"
+          value: "https://opendistro-es-client-service.default.svc.cluster.local:9200"
+        - name: MINIO_ENDPOINT
+          value: "http://minio.default.svc.cluster.local:9000"
         - name: MINIO_ACCESS_KEY
           value: "myaccesskey"
         - name: MINIO_SECRET_KEY
           value: "mysecretkey"
+        - name: MODEL_THRESHOLD
+          value: "0.6"
         resources:
           limits:
             nvidia.com/gpu: 1
