--- a/src/training_controller/training_controller.yaml
+++ b/src/training_controller/training_controller.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: training-controller
-        image: amartyarancher/training-controller:v0.0
+        image: tybalex/training-controller:v0.0
         imagePullPolicy: Always
         env:
         - name: NATS_SERVER_URL
@@ -25,6 +25,8 @@ spec:
           value: "myaccesskey"
         - name: MINIO_SECRET_KEY
           value: "mysecretkey"
+        - name: JOB_NAMESPACE
+          value: "default"
         - name: ES_ENDPOINT
           value: "https://opendistro-es-client-service.default.svc.cluster.local:9200"
         - name: ES_USERNAME
