--- a/src/k8s/services/opni-stack/traefik.yaml
+++ b/src/k8s/services/opni-stack/traefik.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.cattle.io/v1
 kind: HelmChart
 metadata:
   name: traefik 
-  namespace: kube-system
+  namespace: opni-system
 spec:
   chart: traefik
   repo: https://helm.traefik.io/traefik
