--- a/src/k8s/services/preprocessing.yaml
+++ b/src/k8s/services/preprocessing.yaml
@@ -18,6 +18,6 @@ spec:
         imagePullPolicy: Always
         env:
         - name: NATS_SERVER_URL
-          value: "nats://nats_client:%NATS_PASSWORD%@nats-client.kube-system.svc:4222"
+          value: "nats://nats_client:%NATS_PASSWORD%@nats-client.opni-system.svc:4222"
         - name: ES_ENDPOINT
-          value: "https://opendistro-es-client-service.default.svc.cluster.local:9200"
+          value: "https://opendistro-es-client-service.opni-system.svc.cluster.local:9200"
