--- a/src/k8s/services/nulog-inference-service.yaml
+++ b/src/k8s/services/nulog-inference-service.yaml
@@ -22,7 +22,7 @@ spec:
         - name: ES_ENDPOINT
           value: "https://opendistro-es-client-service.opni-system.svc.cluster.local:9200"
         - name: MINIO_ENDPOINT
-          value: "http://minio.default.svc.cluster.local:9000"
+          value: "http://minio.opni-system.svc.cluster.local:9000"
         - name: MINIO_ACCESS_KEY
           value: "myaccesskey"
         - name: MINIO_SECRET_KEY
