--- a/src/k8s/services/preprocessing.yaml
+++ b/src/k8s/services/preprocessing.yaml
@@ -12,6 +12,17 @@ spec:
       labels:
         app: preprocessing-service
     spec:
+      initContainers:
+      - name: kibana-dashboard
+        image: husseingalal/opni-kibana-dashboard:v0.0
+        imagePullPolicy: Always
+        env:
+        - name: ES_ENDPOINT
+          value: "https://opendistro-es-client-service.opni-system.svc.cluster.local:9200"
+        - name: ES_USER
+          value: "%ES_USER%"
+        - name: ES_PASSWORD
+          value: "%ES_PASSWORD%"
       containers:
       - name: preprocessing-service
         image: sanjayrancher/preprocessing-service:v0.0
