--- a/src/k8s/services/nulog-inference-service-control-plane.yaml
+++ b/src/k8s/services/nulog-inference-service-control-plane.yaml
@@ -18,9 +18,9 @@ spec:
         imagePullPolicy: Always
         env:
         - name: NATS_SERVER_URL
-          value: "nats://nats_client:VfU6TcAl9x@nats-client.default.svc:4222"
+          value: "nats://nats_client:VfU6TcAl9x@nats-client.opni-system.svc:4222"
         - name: ES_ENDPOINT
-          value: "https://opendistro-es-client-service.default.svc.cluster.local:9200"
+          value: "https://opendistro-es-client-service.opni-system.svc.cluster.local:9200"
         - name: MINIO_ENDPOINT
           value: "http://minio.opni-system.svc.cluster.local:9000"
         - name: MINIO_ACCESS_KEY
