--- a/src/k8s/services/training_controller.yaml
+++ b/src/k8s/services/training_controller.yaml
@@ -31,6 +31,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: training-controller-rb
+    namespace: default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
