run nvidia plugin in opni-system

--- a/src/k8s/services/nvidia-plugin.yaml
+++ b/src/k8s/services/nvidia-plugin.yaml
@@ -16,7 +16,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: nvidia-device-plugin-daemonset
-  namespace: kube-system
+  namespace: opni-system
 spec:
   selector:
     matchLabels:
