--- a/src/k8s/services/drain-service.yaml
+++ b/src/k8s/services/drain-service.yaml
@@ -14,11 +14,17 @@ spec:
     spec:
       containers:
       - name: drain-service
-        image: sanjayrancher/drain-service:v0.0
+        image: amartyarancher/drain-service:v0.1
         imagePullPolicy: Always
         env:
         - name: NATS_SERVER_URL
           value: "nats://nats_client:%NATS_PASSWORD%@nats-client.opni-system.svc:4222"
+        - name: MINIO_SERVER_URL
+          value: "http://minio.opni-system.svc.cluster.local:9000"
+        - name: MINIO_ACCESS_KEY
+          value: "%MINIO_ACCESS_KEY%"
+        - name: MINIO_SECRET_KEY
+          value: "%MINIO_SECRET_KEY%"
         - name: ES_ENDPOINT
           value: "https://opendistro-es-client-service.opni-system.svc.cluster.local:9200"
         - name: FAIL_KEYWORDS
