--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -22,7 +22,7 @@ RUN curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 |
 ENV GO111MODULE off
 ENV DAPPER_ENV REPO TAG DRONE_TAG CROSS
 ENV DAPPER_SOURCE /go/src/github.com/rancher/opnictl/
-ENV DAPPER_OUTPUT ./bin ./dist ./pkg/deploy/zz_generated_bindata.go
+ENV DAPPER_OUTPUT ./bin ./dist
 ENV DAPPER_DOCKER_SOCKET true
 ENV HOME ${DAPPER_SOURCE}
 WORKDIR ${DAPPER_SOURCE}
