Use upstream images

--- a/manifests/opni-stack/rancher-logging.yaml
+++ b/manifests/opni-stack/rancher-logging.yaml
@@ -17,3 +17,5 @@ spec:
   chart: rancher-logging
   repo: http://charts.rancher.io/
   version: "3.9.400"
+  set:
+    additionalLoggingSources.rke.enabled: "true"
