Improvements to progress output

--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -600,7 +600,7 @@ spec:
         - --leader-elect
         command:
         - /manager
-        image: rancher/opni:latest
+        image: joekralicky/opni-manager:latest
         livenessProbe:
           httpGet:
             path: /healthz
