--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -1,15 +1,15 @@
 resources:
-- manager.yaml
+  - manager.yaml
 
 generatorOptions:
   disableNameSuffixHash: true
 
 configMapGenerator:
-- files:
-  - controller_manager_config.yaml
-  name: manager-config
+  - files:
+      - controller_manager_config.yaml
+    name: manager-config
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
-- name: controller
-  newName: rancher/opni
+  - name: controller
+    newName: joekralicky/opni-manager
