Create dashboard pod
Creates a pod to deploy the kibana dashboard and index pattern for opni.  If pod already exists will skip it.  If pod is in a failed state will delete the existing pod and reschedule.

--- a/config/crd/bases/demo.opni.io_opnidemoes.yaml
+++ b/config/crd/bases/demo.opni.io_opnidemoes.yaml
@@ -65,6 +65,8 @@ spec:
                 - infra
                 - opni
                 type: object
+              createKibanaDashboard:
+                type: boolean
               elasticsearchPassword:
                 type: string
               elasticsearchUser:
