Add opnictl get command, misc fixes/refactors

--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -261,6 +261,8 @@ spec:
                 - infra
                 - opni
                 type: object
+              createKibanaDashboard:
+                type: boolean
               elasticsearchPassword:
                 type: string
               elasticsearchUser:
