Add nulog train image environment variable to training controller; fix namespace arg

--- a/config/crd/bases/demo.opni.io_opnidemoes.yaml
+++ b/config/crd/bases/demo.opni.io_opnidemoes.yaml
@@ -71,6 +71,8 @@ spec:
                 type: string
               elasticsearchUser:
                 type: string
+              image:
+                type: string
               minioAccessKey:
                 type: string
               minioSecretKey:
@@ -97,6 +99,7 @@ spec:
             - components
             - elasticsearchPassword
             - elasticsearchUser
+            - image
             - minioAccessKey
             - minioSecretKey
             - minioVersion
