Update images for 0.1.1 release

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -27,7 +27,7 @@ spec:
             - /manager
           args:
             - --leader-elect
-          image: controller:latest
+          image: controller
           name: manager
           securityContext:
             allowPrivilegeEscalation: false
