--- a/.drone.yml
+++ b/.drone.yml
@@ -23,29 +23,31 @@ steps:
   when:
     event:
     - tag
+    instance:
+    - drone-publish.rancher.io
     ref:
-    - refs/head/operator
-    - refs/head/ci
+    - refs/head/main
     - refs/tags/*
 
-- name: publish-dockerhub
-  image: plugins/docker
-  settings:
-    password:
-      from_secret: docker_password
-    username:
-      from_secret: docker_username
-    context: package/
-    dockerfile: package/Dockerfile
-    repo: rancher/opni-manager
-    tag: ${DRONE_TAG}
-  when:
-    event:
-    - tag
-    refs:
-    - refs/head/operator
-    - refs/head/ci
-    - refs/tags/*
+#- name: publish-dockerhub
+#  image: plugins/docker
+#  settings:
+#    password:
+#      from_secret: docker_password
+#    username:
+#      from_secret: docker_username
+#    context: package/
+#    dockerfile: package/Dockerfile
+#    repo: rancher/opni-manager
+#    tag: ${DRONE_TAG}
+#  when:
+#    event:
+#    - tag
+#    instance:
+#    - drone-publish.rancher.io
+#    refs:
+#    - refs/head/main
+#    - refs/tags/*
 
 - name: publish-bin-artifacts
   image: plugins/github-release
@@ -59,9 +61,10 @@ steps:
   when:
     event:
     - tag
+    instance:
+    - drone-publish.rancher.io
     ref:
-    - refs/head/operator
-    - refs/head/ci
+    - refs/head/main
     - refs/tags/*
   
 volumes:
