--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -665,7 +665,7 @@ spec:
         - --leader-elect
         command:
         - /manager
-        image: rancher/opni-manager:v0.1.0-rc4:latest
+        image: joekralicky/opni-manager:v0.1.1
         livenessProbe:
           httpGet:
             path: /healthz
